fixing [#623] - alignment on resume page

--- a/htdocs/theme/default/static/style/style.css
+++ b/htdocs/theme/default/static/style/style.css
@@ -1725,3 +1725,11 @@ a.pieform-calendar-toggle img {
     text-align:center;
     margin-top:4px;
 }
+
+/** RESUME **/
+.tablerenderer th.resumecontrols {
+    width:50px; !important;
+}
+
+.tablerenderer th.resumedate {
+    width:100px; !important;
